# fraud-mlops-demo

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
infra/databricks/: .terraform.lock.hcl  main.tf  variables.tf
notebooks/: 01_train_model.ipynb  mlflow.db
notebooks/artifacts/: model.joblib
notebooks/mlruns/1/models/m-f728e9a2327b4e96ae301bf579203852/artifacts/: MLmodel  python_env.yaml
src/: mlflow.db
src/artifacts/: model.joblib
src/fraud_mlops_demo/service/: app.py
src/fraud_mlops_demo/training/: train.py
src/mlruns/0/models/m-f5fcf8ce61c34426b1b2d2aaafdeddf9/artifacts/: MLmodel  conda.yaml
src/mlruns/1/models/m-7b0710a4cd5446d093dbed88b15daf93/artifacts/: MLmodel  conda.yaml  model.pkl
