[project]
name = "fraud-mlops-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.1",
    "mlflow>=3.10.0",
    "pyspark>=4.1.1",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ipykernel>=6.30.1",   # << add here
    "notebook>=7.0.0",     # optional, for Jupyter
]
